webwide: fix footer on mobile

--- a/service/styles.css
+++ b/service/styles.css
@@ -53,6 +53,26 @@ body {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
+@media screen and (max-width: 1000px) {
+    .footer-content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-section {
+        margin-bottom: 20px;
+        /* Add some space between stacked elements */
+    }
+
+    .footer-content .h3 {
+        text-align: center;
+    }
+
+    .footer h3 {
+        text-align: center;
+    }
+}
+
 .left-links {
     display: flex;
 }
